<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">BookList</string>
    <string name="delete">Delete</string>
    <string name="load_xml">Load Books from DC XML file</string>
	<string name="about">About</string>
	<string name="RemoveKeys">Remove App Keys</string>
	<string name="Search">Search</string>
	<string name="GetFile">Get updated XML file</string>
	<string name="Status">Status</string>
	<string name="Author">Author</string>
	<string name="Title">Title</string>
	<string name="XX">XX</string>
	<string name="NumRec">Number of Records in DB: </string>
	<string name="srchPre">Prepend wildcard</string>
	<string name="srchPost">Append wildcard</string>
</resources>
